--- a/OpenCV_async/res/layout/compas.xml
+++ b/OpenCV_async/res/layout/compas.xml
@@ -54,14 +54,14 @@
         android:layout_margin="20dp"
         android:layout_marginBottom="20dp"
         android:max="100"
-        android:progress="50" />
+        android:progress="1" />
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/txtAssoc"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -116,7 +116,7 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/txtScanner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView" />
